- Added filter gravityflow_entry_url_inbox_table to allow customization of the link from inbox.
- Added filter gravityflow_approval_revert_step_id to allow customization of the revert step. 
- Fixed the Post Creation step creating duplicate posts when the workflow or step is restarted.
- Fixed back link display on entry detail page to use css with class gravityflow-back-link-container instead of line breaks for spacing.
- Fixed PHP 7.3 compatability warning related to entry detail screen display.
- Fixed number field display on user input steps when the field contained 0 value.
- Fixed delayed Zapier steps send duplicate content from the first entry in queue.
- Fixed when gravityflow_form_ids_status executes to ensure entry counts + pagination counts match filtering form IDs.
- Added Merge Tag selector to Outgoing Webhook step settings for raw request body.