@@ -7,3 +7,4 @@
 - Fixed delayed Zapier steps send duplicate content from the first entry in queue.
 - Fixed when gravityflow_form_ids_status executes to ensure entry counts + pagination counts match filtering form IDs.
 - Added Merge Tag selector to Outgoing Webhook step settings for raw request body.
+- Added the filter gravityflow_step_is_condition_met to enable complex conditional logic for start (or not) a given step.
